🐛 Fixed overflow issues

--- a/src/Components/DomainCards/DomainCards.scss
+++ b/src/Components/DomainCards/DomainCards.scss
@@ -12,6 +12,9 @@
     @media only screen and (max-width: 750px) {
         grid-template-columns:  1fr 1fr;
     }
+    @media only screen and (max-width: 400px) {
+        grid-template-columns:  1fr;
+    }
 
     a {
         color: $lightBlue;
@@ -65,6 +68,9 @@
                 }
                 @media only screen and (max-width: 500px) {
                     font-size: .8em;
+                }
+                @media only screen and (max-width: 400px) {
+                    font-size: 1em;
                 }
             }
         }
